--- a/간단 원신 홈페이지/index.html
+++ b/간단 원신 홈페이지/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/b885112c80.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>원신 홈페이지</title>
 </head>
 <body>
     <video autoplay muted loop>
